--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,7 @@
 pritunl-endpoint changelog
 ==========================
 
-<%= version %>
+Version 1.0.2012.28 2021-05-28
+------------------------------
 
 Initial release
