--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
 pritunl-endpoint changelog
 ==========================
 
+<%= version %>
+
+Add diskio
+
 Version 1.0.2012.28 2021-05-28
 ------------------------------
 
