--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
 pritunl-endpoint changelog
 ==========================
 
+<%= version %>
+
+Improve network and diskio monitoring
+
 Version 1.0.2095.36 2021-08-19
 ------------------------------
 
