--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,8 @@
 pritunl-endpoint changelog
 ==========================
 
-<%= version %>
+Version 1.0.2143.33 2021-10-06
+------------------------------
 
 Improve network and diskio monitoring
 
