--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
 pritunl-endpoint changelog
 ==========================
 
+<%= version %>
+
+Update distribution support
+
 Version 1.0.2255.3 2022-01-26
 -----------------------------
 
