--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
 pritunl-endpoint changelog
 ==========================
 
+<%= version %>
+
+Update libraries
+
 Version 1.0.2402.74 2022-06-22
 ------------------------------
 
