--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,8 @@
 pritunl-endpoint changelog
 ==========================
 
-<%= version %>
+Version 1.0.2495.69 2022-09-23
+------------------------------
 
 Add kmsg
 Add health checks
