--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,8 @@
 pritunl-endpoint changelog
 ==========================
 
-<%= version %>
+Version 1.0.2518.43 2022-10-16
+------------------------------
 
 Fix dnf update check
 
