--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
 pritunl-endpoint changelog
 ==========================
 
+<%= version %>
+
+Update libraries
+
 Version 1.0.2519.91 2022-10-17
 ------------------------------
 
